# avenir-engine

./: .clang-format  CMakeLists.txt  README.md
examples/vulkan/: CMakeLists.txt
examples/vulkan/hello_window/: CMakeLists.txt  main.cpp
examples/vulkan/simple_fps/: CMakeLists.txt  FPSController.cpp  FPSController.hpp  main.cpp
examples/vulkan/simple_fps/resources/shaders/: shader.slang
examples/vulkan/simple_renderer/: CMakeLists.txt  main.cpp
include/avenir/: avenir.hpp
include/avenir/debug/: Debug.hpp
include/avenir/graphics/: Mesh.hpp  Renderer.hpp
include/avenir/graphics/vulkan/: VulkanInstance.hpp  VulkanMesh.hpp  VulkanRenderer.hpp
include/avenir/input/: InputManager.hpp
include/avenir/platform/: Time.hpp  Window.hpp
include/avenir/scene/: Component.hpp  Entity.hpp  Scene.hpp
include/avenir/scene/components/: Camera.hpp  MeshRenderer.hpp  Transform.hpp
src/debug/: Debug.cpp
src/graphics/: Mesh.cpp  Renderer.cpp  stb_image_impl.cpp
src/graphics/vulkan/: VulkanInstance.cpp  VulkanMesh.cpp  VulkanRenderer.cpp
src/input/: InputManager.cpp
src/platform/: Time.cpp  Window.cpp
src/scene/: Entity.cpp  Scene.cpp
src/scene/components/: Camera.cpp  MeshRenderer.cpp  Transform.cpp
